syntax = "proto3";

package yahoo_finance;

message PricingData {
    string id = 1;
    float price = 2;
    int64 time = 3;
    string currency = 4;
    string exchange = 5;
    int32 quoteType = 6;
    int32 marketHours = 7;
    float changePercent = 8;
    int64 dayVolume = 9;
    float dayHigh = 10;
    float dayLow = 11;
    float change = 12;
    string shortName = 13;
    int64 expireDate = 14;
    float openPrice = 15;
    float previousClose = 16;
    float strikePrice = 17;
    string underlyingSymbol = 18;
    int64 openInterest = 19;
    int32 optionsType = 20;
    int64 miniOption = 21;
    int64 lastSize = 22;
    float bid = 23;
    float bidSize = 24;
    float ask = 25;
    float askSize = 26;
    int64 priceHint = 27;
    bool vol_24hr = 28;
    bool volAllCurrencies = 29;
    string fromcurrency = 30;
    string lastMarket = 31;
    double circulatingSupply = 32;
    double marketcap = 33;
}
